examples/test/testpolicy14967.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14967
  namespace: namespace71
spec:
  podSelector:
    matchLabels:
      key1: value23
      key0: value27
      key6: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value13
          key48: value42
      podSelector:
        matchLabels:
          key45: value19
          key0: value16
